Agrego soluciones de examenes de CSP y Statecharts

--- a/4 Ano/Ingenieria del Software I/Examenes/CSP.lyx
+++ b/4 Ano/Ingenieria del Software I/Examenes/CSP.lyx
@@ -1737,6 +1737,37 @@ Tabla de control
 Statecharts
 \end_layout
 
+\begin_layout Standard
+\begin_inset Graphics
+	filename Imagenes/alarma/sensores.png
+	scale 20
+
+\end_inset
+
+
+\begin_inset Graphics
+	filename Imagenes/alarma/teclado.png
+	scale 20
+
+\end_inset
+
+
+\begin_inset Graphics
+	filename Imagenes/alarma/a.png
+	scale 20
+
+\end_inset
+
+
+\begin_inset Graphics
+	filename Imagenes/alarma/receptora.png
+	scale 20
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsubsection
 CSP
 \end_layout
